--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Tera web</title>                  <!--Change for your own title-->
+    <title>Benny web gallery</title>                  <!--Change for your own title-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/lightbox.css">
@@ -24,7 +24,7 @@
     <header>
       <nav class="content">
         <h1>
-          <a href="index.html">Tera Art Gallery</a> <!--Change for your own title-->
+          <a href="index.html">Benny Art Gallery</a> <!--Change for your own title-->
         </h1>
         <ul>
           <li>
@@ -38,32 +38,34 @@
     </header>
 
     <article id="page" class="content">
-      <h2>My Gallery</h2>                <!--Change for your own title-->
+      <h2>Benny Guan</h2>                <!--Change for your own title-->
       <p>
-      Write about you here.              <!--Write about yourself-->
+      My favorite color is blue              <!--Write about yourself-->
       </p>
       <p>
-      Write texting here.                <!--Write four lines from your texting-->
+      I like food.
+      I like to sleep
+      I like watching the Simpsons                <!--Write four lines from your texting-->
       </p>
       <ul class="gallery">
         <li>
-          <a data-lightbox="image-1" href="img/brunobig.jpg"> <!--Add your own big jpg-->
-            <img src="img/brunosmall.jpg">                 <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/benny guan avatar.png"> <!--Add your own big jpg-->
+            <img src="img/benny guan avatar.png">                 <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-2-800x800.jpg">
-            <img src="img/photos/photo-2-200x200.jpg">
+          <a data-lightbox="image-1" href="img/Benny guan 80 year old self 1.png">
+            <img src="img/Benny guan 80 year old self 1.png">
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-3-800x800.jpg">
-            <img src="img/photos/photo-3-200x200.jpg">
+          <a data-lightbox="image-1" href="img/benny double exposure.png">
+            <img src="img/benny double exposure.png">
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-4-800x800.jpg">
-            <img src="img/photos/photo-4-200x200.jpg">
+          <a data-lightbox="image-1" href="img/download (2).jpg">
+            <img src="img/download (2).jpg">
           </a>
         </li>
         
@@ -71,7 +73,7 @@
     </article>
     <footer>
       <div class="content">
-        <p>Hello, world!  What a nice footer.</p>      <!--Change for your own title-->
+        <p>Hello, world!  what a nice gallery isn't it </p>      <!--Change for your own title-->
       </div>
     </footer>
   </body>
